[package]
name = "catprint"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.8"
uuid = "0.8"
futures = "0.3"
tokio = {version = "1.10", features = ["rt", "macros", "rt-multi-thread"] }
crc = { git = "ssh://git@github.com/mrhooray/crc-rs.git" }
dither = "=1.3.7" # last version without nightly requirement
image = "0.23"
clap = "3.0.0-beta.4"
