[package]
name = "catprint"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11"
uuid = "1.10"
futures = "0.3"
tokio = {version = "1.10", features = ["rt", "macros", "rt-multi-thread"] }
crc = { git = "https://github.com/mrhooray/crc-rs.git" }
dither = "=1.3.7" # last version without nightly requirement
image = "0.25"
clap = { version = "4.5", features = ["derive"] }